tests/ui/traits/issue-85360-eval-obligation-ice.stderr
error: evaluate(Binder(TraitPredicate(<MaskedStorage<GenericComp<Pos>> as std::marker::Sized>, polarity:Positive), [])) = Ok(EvaluatedToOk)
  --> $DIR/issue-85360-eval-obligation-ice.rs:9:5
   |
LL |     test::<MaskedStorage<GenericComp<Pos>>>(make());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn test<T: Sized>(_: T) {}
   |         - predicate

error: evaluate(Binder(TraitPredicate(<MaskedStorage<GenericComp<Pos>> as std::marker::Sized>, polarity:Positive), [])) = Ok(EvaluatedToOk)
  --> $DIR/issue-85360-eval-obligation-ice.rs:9:5
   |
LL |     test::<MaskedStorage<GenericComp<Pos>>>(make());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn test<T: Sized>(_: T) {}
   |            ----- predicate

error: evaluate(Binder(TraitPredicate(<MaskedStorage<GenericComp2<Pos>> as std::marker::Sized>, polarity:Positive), [])) = Ok(EvaluatedToOkModuloRegions)
  --> $DIR/issue-85360-eval-obligation-ice.rs:13:5
   |
LL |     test::<MaskedStorage<GenericComp2<Pos>>>(make());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn test<T: Sized>(_: T) {}
   |         - predicate

error: evaluate(Binder(TraitPredicate(<MaskedStorage<GenericComp2<Pos>> as std::marker::Sized>, polarity:Positive), [])) = Ok(EvaluatedToOkModuloRegions)
  --> $DIR/issue-85360-eval-obligation-ice.rs:13:5
   |
LL |     test::<MaskedStorage<GenericComp2<Pos>>>(make());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn test<T: Sized>(_: T) {}
   |            ----- predicate

error: aborting due to 4 previous errors

